It has a working clear btn and you can resize the grid

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="btn">Clear</button>
-    <div id="container">
+    <div class="btnCont">
+        <button class="btn">Clear</button>
+        <button class="btn16">16x16</button>
+        <button class="btn32">32x32</button>
+        <button class="btn64">64x64</button>
+    </div>
+    <div id="container" class="container">
     </div>
     <script src="script.js"></script>
 </body>
